--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,25 @@
 
   <body>
 
-    <%= yield %>
-    <%= javascript_include_tag "application" %>
+    <nav class="top-bar" data-topbar role="navigation">
+      <ul class="title-area">
+        <li class="name">
+          <h1><a href="#">Treebook</a></h1>
+        </li>
+      </ul>
+      <section class="top-bar-section">
+        <ul class="left">
+          <li class=""><%= link_to "All Statuses", statuses_path %></li>
+        </ul>
+      </section>
+    </nav>
+    <div class="row">
+      <div class="small-12 small-centered column">
+        <p class="notice"><%= notice %></p>
+        <p class="alert"><%= alert %></p>
+        <%= yield %>
+        <%= javascript_include_tag "application" %>
+      </div>
+    </div>
   </body>
 </html>
