--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,27 +11,41 @@
     <%= csrf_meta_tags %>
   </head>
 
-  <body>
+<body>
+   <div class="contain-to-grid">
+       <nav class="top-bar" data-topbar role="navigation">
+         <ul class="title-area">
+           <li class="name">
+             <h1><a href="#">Treebook</a></h1>
+           </li>
+         </ul>
+         <section class="top-bar-section">
+           <ul class="left">
+             <li class=""><%= link_to "All Statuses", statuses_path %></li>
+           </ul>
+           <ul class="right">
+            <% if user_signed_in? %>
+                <li><%= link_to current_user.full_name, edit_user_registration_path %></li>
+                <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
+            <% else %>
+               <li><%= link_to "Register", new_user_registration_path %></li>
+                <li><%= link_to "Log In", new_user_session_path %>
+             <% end %>
+           </ul>
+         </section>
+       </nav>
+     </div>
+       <div class="row">
+         <div class="small-12 small-centered column">
+           <p class="notice"><%= notice %></p>
+           <p class="alert"><%= alert %></p>
+           
+           <%= yield %>
 
-    <nav class="top-bar" data-topbar role="navigation">
-      <ul class="title-area">
-        <li class="name">
-          <h1><a href="#">Treebook</a></h1>
-        </li>
-      </ul>
-      <section class="top-bar-section">
-        <ul class="left">
-          <li class=""><%= link_to "All Statuses", statuses_path %></li>
-        </ul>
-      </section>
-    </nav>
-    <div class="row">
-      <div class="small-12 small-centered column">
-        <p class="notice"><%= notice %></p>
-        <p class="alert"><%= alert %></p>
-        <%= yield %>
-        <%= javascript_include_tag "application" %>
-      </div>
-    </div>
+           <%= javascript_include_tag "application" %>
+
+         </div>
+       </div>
   </body>
+
 </html>
