--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,15 +21,15 @@
          </ul>
          <section class="top-bar-section">
            <ul class="left">
-             <li class=""><%= link_to "All Statuses", statuses_path %></li>
+             <li class=""><%= link_to "All Statuses", feed_path %></li>
            </ul>
            <ul class="right">
             <% if user_signed_in? %>
                 <li><%= link_to current_user.full_name, edit_user_registration_path %></li>
-                <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
+                <li><%= link_to "Log Out", logout_path %></li>
             <% else %>
-               <li><%= link_to "Register", new_user_registration_path %></li>
-                <li><%= link_to "Log In", new_user_session_path %>
+               <li><%= link_to "Register", register_path %></li>
+                <li><%= link_to "Log In", login_path %>
              <% end %>
            </ul>
          </section>
