--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -1,17 +1,15 @@
-<h1>Listing statuses</h1>
+<h1 class="space-on-top">Listing statuses</h1>
 
 <table>
   <thead>
-    <tr>
-      <th>Name</th>
-      <th>Content</th>
-      <th colspan="3"></th>
-    </tr>
+    
   </thead>
 
   <tbody>
+
     <% @statuses.each do |status| %>
       <tr>
+        <td><%= image_tag status.user.gravatar_url %></td>
         <td><%= status.user.full_name %></td>
         <td><%= status.content %></td>
         <td><%= link_to 'Show', status %></td>
