--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -9,7 +9,7 @@
 
     <% @statuses.each do |status| %>
       <tr>
-        <td><%= image_tag status.user.gravatar_url %></td>
+        <td><%= link_to image_tag(status.user.gravatar_url), profile_path(status.user) %></td>
         <td><%= status.user.full_name %></td>
         <td><%= status.content %></td>
         <td><%= link_to 'Show', status %></td>
