--- a/app/views/user_friendships/new.html.erb
+++ b/app/views/user_friendships/new.html.erb
@@ -1,3 +1,13 @@
 <% if @friend %>
 <h1><%= @friend.full_name %></h1>
+
+	<p>Do you really want to friend <%= @friend.full_name %>?</p>
+
+	<%= form_for @user_friendship, method: :post do |form| %>
+		<div class="form form-action">
+			<%= form.hidden_field :friend_id, value: @friend_id %>
+			<%= submit_tag "Yes, Add Friend", class: "button radius" %>
+			<%= link_to "Cancel", profile_path(@friend), class: "button radius" %>
+		</div>
+	<% end %>
 <% end %>
