--- a/app/views/user_friendships/new.html.erb
+++ b/app/views/user_friendships/new.html.erb
@@ -5,7 +5,7 @@
 
 	<%= form_for @user_friendship, method: :post do |form| %>
 		<div class="form form-action">
-			<%= form.hidden_field :friend_id, value: @friend_id %>
+			<%= form.hidden_field :friend_id, value: @friend.profile_name %>
 			<%= submit_tag "Yes, Add Friend", class: "button radius" %>
 			<%= link_to "Cancel", profile_path(@friend), class: "button radius" %>
 		</div>
